--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -87,7 +87,7 @@
             <div class="swiper-pagination swiper-pagination-bullets"></div>
         </div>
         <a href="{% url 'menu:trouser_by_category' 'bestsellers' %}" class="btn btn-lg px-5 py-3 font-weight-bold rounded-0 text-center mx-auto text-white" style="background-color:#1c1b1b;font-size:11px;" role="button">VIEW ALL</a>
-    </div>
+    </div>
     <div class="row mb-4 back-in-stock-md">
         <span class="text-uppercase mb-4 px-2">BACK IN STOCK</span>
         <div
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="swiper-pagination swiper-pagination-bullets d-lg-none d-flex justify-content-start"></div>
-        </div>
+        </div>
     </div>
     <div class="row mb-4 pb-4 no-gutters new-arrivals">
         <span class="text-uppercase mb-4 font-weight-light">NEW ARRIVALS</span>
