--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -126,7 +126,7 @@
             </div>
         </div>
     </div>
-    <div>
+    <div v-else>
         <p class="text-center">Page Not Found.</p>
     </div>
 </div>
