--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
             {% block style %}{% endblock style %}
     </head>
     <body>
-        <div class="container-fluid px-0 main-wrapper" style="padding-top: 70px;">    
+        <div class="container-fluid px-0 main-wrapper">    
             <div class="overlayy"></div>
             {% include 'assets/navbar.html' %}
             <!-- Page Content Holder -->
