--- a/templates/cart/checkout.html
+++ b/templates/cart/checkout.html
@@ -24,7 +24,7 @@
             <div class='col-12 col-md-6 my-5' v-if="showguest">
                 <div class="card border-dark">
                     <p class='lead card-header bg-dark font-weight-bold'>Continue as Guest / <button @click="showform" class="btn btn-link text-white pl-0">login</button></p>
-                    <div class="card-body text-info">
+                    <div class="card-body text-info">
                         {% url "accounts:guest_register" as guest_register_url %}
                         {% include 'accounts/snippets/form.html' with form=guest_form next_url=request.build_absolute_uri action_url=guest_register_url %}
                     </div>
@@ -69,7 +69,7 @@
             {% else %}
                 <div class>
                     {% if request.user.is_authenticated %}
-                    <a href="{% url 'accounts:address-create' %}?next={{ request.build_absolute_uri }}">Create new</a>
+                    <a href="{% url 'accounts:address-create' %}?next={{ request.build_absolute_uri }}" class="btn btn-lg rounded-0 btn-primary" role="button">Create new</a>
                     {% else %}
                         {% url "cart:checkout_address_create" as checkout_address_create %}
                         {% include 'addresses/form.html' with form=address_form next_url=request.build_absolute_uri action_url=checkout_address_create address_type='shipping' %}'
