--- a/templates/error.html
+++ b/templates/error.html
@@ -4,10 +4,7 @@
 <div class="container">
     <div class="row align-items-center justify-content-center">
         <div class="col-md-8">
-            <h1>{{ error_message }}</h1>
-            <section class="text-dark font-weight-bold">
-                <h2>{% if error == "500"%}5{% else %}4{% endif %}0{% if error == "404"%}4{% else %}0{% endif %}</h2>
-            </section>
+            <h1 class="text-center">{{ error_message }}&nbsp;<i class="fas fa-theater-masks"></i></h1>
             <div class="d-flex justify-content-center">
                 <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-primary btn-lg rounded-0" role="button">Go Back</a>
                 <a href="{% url 'shop:shop-index' %}" class="btn btn-success btn-lg rounded-0" role="button">Home</a>
