--- a/templates/error.html
+++ b/templates/error.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
     <div class="row align-items-center justify-content-center">
-        <div class="col-md-8">
-            <h1 class="text-center">{{ error_message }}&nbsp;<i class="fas fa-theater-masks"></i></h1>
+        <div class="col-md-8 my-5">
+            <h1 class="text-center my-2">{{ error_message }}&nbsp;<i class="fas fa-theater-masks"></i></h1>
             <div class="d-flex justify-content-center">
                 <a href="{{ request.META.HTTP_REFERER }}" class="btn btn-primary btn-lg rounded-0" role="button">Go Back</a>
                 <a href="{% url 'shop:shop-index' %}" class="btn btn-success btn-lg rounded-0" role="button">Home</a>
