--- a/templates/shop/item_detail.html
+++ b/templates/shop/item_detail.html
@@ -36,38 +36,47 @@
     .swiper-button-prev{
         border-radius: 100%;
     }
-
-    {% comment %} .animated{
-        animation-fill-mode: none;
-    } {% endcomment %}
+    .swiper-pagination-bullet{
+        background: transparent;
+        opacity: .8;
+        border: 1px solid black;
+    }
+    .swiper-pagination-bullet-active{
+        background: #000;
+    }
 </style>
 {% endblock style %}
 {% block content %}
 <div id="trouserappdetail" class="container">
     <div v-if="has_content">
         <div class="row no-gutters justify-content-between">
-            <div class="col-12 col-md-5 d-flex justify-content-center align-items-center order-0" style="min-height:400px;">
-                <transition enter-active-class="animate__animated animate__fadeIn" leave-active-class="animate__animated animate__fadeOut">
-                    <div class="" v-if="change">
-                        <img :src="mainImage">
+            <div class="col-12 col-md-5 order-0" style="min-height:448px;">
+                <div
+                    class="trouserimages pb-5 h-100"
+                    {% comment %} style="min-height:400px;" {% endcomment %}
+                    v-swiper:trouserimages="trouserimagesoptions"
+                    @click-slide="onSwiperClickSlide"
+                    @slide-change-transition-start="onSwiperSlideChangeTransitionStart"
+                    v-if="change"
+                >
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide text-center" v-for="(img, index) in selected_trouser.trouser_variant_images" :key="index">
+                            <div class="swiper-zoom-container">
+                                <img :data-src="img.file" class="swiper-lazy">
+                                <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
+                            </div>
+                        </div>
                     </div>
-                </transition>
+                    <div class="swiper-pagination main-detail swiper-pagination-bullets" v-if="selected_trouser_images_count > 1"></div>
+                </div>
             </div>
             <div class="jumbotron py-0 mb-0 px-3 col-12 order-2 order-md-1 col-md-6 mt-3 overflow-auto" style="max-height:400px;">
                 <div class="d-inline-block"><span v-html="description"></span></div>
             </div>
             <div class="col-12 col-md-5 px-0 my-2 order-1 m-md-0 order-md-2">
-                <div style="min-height:62px;" v-if="selected_trouser_images_count > 1">
-                    <div class="d-flex animate__fadeInLeft flex-wrap" v-bind:class="{animate__animated: !blur}" v-if="selected_trouser_images_count > 1 && !changeText">
-                        <div class="border border-white mr-2" v-for="(img, index) in thumbnails" style="cursor:pointer;" :class="{ 'shadow' : selectedThumbnail === index}" :key="index">
-                            <img :src="img" style="height:60px;width:60px;" @click="changeMainImage(index)">
-                        </div>
-                    </div>
-                </div>
                 <div v-if="trousers.length > 1">
-                    <p class="mb-0 my-3 font-italic font-weight-bold">Available Colors:</p>
                     <div class="d-flex flex-wrap animate__fadeInLeftBig" v-bind:class="{animate__animated: !blur}">
-                        <div class="border border-dark mr-2" v-for="(img, index) in trousers" style="cursor:pointer;" :class="{ 'shadow' : selectedVariant === index}" :key="index">
+                        <div class="mr-2 p-1" v-for="(img, index) in trousers" style="cursor:pointer;" :class="{ 'border border-dark' : selectedVariant === index}" :key="index">
                             <img :src="img.trouser_variant_images[0].thumbnail" @click="change_selected_trouser(index)">
                         </div>
                     </div>
@@ -93,36 +102,37 @@
                     Remove from cart <i class="fas fa-trash-alt text-white"></i> ([[ quantity ]])
                 </button>
             </div>
-            <div
-                class="swiper py-5 mx-0 col-md-6 order-3 order-md-3"
-                v-swiper:swiper="swiperOptions"
-                @click-slide="onSwiperClickSlide"
-                @slide-change-transition-start="onSwiperSlideChangeTransitionStart"
-            >
-                <div class="d-flex justify-content-center">
-                    <h4 class="text-uppercase font-weight-light">related Products</h4>
-                </div>
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide card bg-transparent border-0" v-for="trouser in similiar_trousers" :key="trouser.id">
-                        <div class="d-flex bg-transparent align-items-center justify-contents-center overflow-hidden">
-                            <a :href="trouser.url"><img :src="trouser.first_variant.first_image.file" class="img-fluid img-responsive mx-auto card-img-top" alt="image"></a>
-                        </div>
-                        <div class="card-body py-0">
-                            <h5 class="card-title text-center small">[[ trouser.name ]]</h5>
-                            <span class="d-flex justify-content-center" style="font-size:10px;font-weight:600;">
-                                <del class="card-text text-danger" v-if="trouser.first_variant.old_price"></del>
-                                <p class="align-text-bottom card-text font-weight-bolder">&nbsp;[[ trouser.first_variant.price|currency ]]</p>
-                            </span>
+            <div class="my-3 my-md-auto mx-0 col-md-6 order-3 order-md-3">
+                <h5 class="text-uppercase font-weight-bold">you might also like</h5>
+                <div
+                    class="swiper pb-5 h-100"
+                    v-swiper:swiper="swiperOptions"
+                    @click-slide="onSwiperClickSlide"
+                    @slide-change-transition-start="onSwiperSlideChangeTransitionStart"
+                >
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide card bg-transparent border-0" v-for="trouser in similiar_trousers" :key="trouser.id">
+                            <div class="d-flex bg-transparent align-items-center justify-contents-center overflow-hidden" style="min-height:230px;">
+                                <a :href="trouser.url"><img :data-src="trouser.first_variant.first_image.file" class="swiper-lazy img-fluid img-responsive mx-auto card-img-top"></a>
+                                <div class="swiper-lazy-preloader swiper-lazy-preloader-black"></div>
+                            </div>
+                            <div class="card-body py-0">
+                                <h5 class="card-title text-center small">[[ trouser.name ]]</h5>
+                                <span class="d-flex justify-content-center" style="font-size:10px;font-weight:600;">
+                                    <del class="card-text text-danger" v-if="trouser.first_variant.old_price"></del>
+                                    <p class="align-text-bottom card-text font-weight-bolder">&nbsp;[[ trouser.first_variant.price|currency ]]</p>
+                                </span>
+                            </div>
                         </div>
                     </div>
+                    <div class="d-none d-lg-block swiper-button-prev">
+                        <i class="fas text-black-50 fa-2x fa-angle-left"></i>
+                    </div>
+                    <div class="d-none d-lg-block swiper-button-next">
+                        <i class="fas text-black-50 fa-2x fa-angle-right"></i>
+                    </div>
+                    <div class="swiper-pagination swiper-pagination-bullets"></div>
                 </div>
-                <div class="d-none d-lg-block swiper-button-prev">
-                    <i class="fas text-black-50 fa-2x fa-angle-left"></i>
-                </div>
-                <div class="d-none d-lg-block swiper-button-next">
-                    <i class="fas text-black-50 fa-2x fa-angle-right"></i>
-                </div>
-                <div class="swiper-pagination swiper-pagination-bullets"></div>
             </div>
         </div>
     </div>
@@ -171,13 +181,13 @@
                 cartItems: {{ request.session.cart|jsonify }},
                 currentSize: "",
                 quantity: undefined,
-                mainImage: null,
-                thumbnails: null,
                 swiperOptions: {
                     grabCursor: true,
-                    {% comment %} loop: false, {% endcomment %}
+                    lazy: true,
+                    preloadImages: false,
+                    watchSlideVisibility: true,
                     autoplay: {
-                        delay: 2000,
+                        delay: 3000,
                         disableOnInteraction: false,
                     },
                     pagination: {
@@ -200,6 +210,25 @@
                             {% comment %} spaceBetween: 10 {% endcomment %}
                         },
                     }
+                },
+                trouserimagesoptions: {
+                    grabCursor: true,
+                    lazy: true,
+                    preloadImages: false,
+                    effect: 'fade',
+                    watchSlideVisibility: true,
+                    fadeEffect: {
+                        crossFade: true,
+                    },
+                    {% comment %} loop: false, {% endcomment %}
+                    pagination: {
+                        el: '.swiper-pagination',
+                        clickable: true,
+                    },
+                    navigation: {
+                        nextEl: '.swiper-button-next',
+                        prevEl: '.swiper-button-prev'
+                    },
                 }
             }
         },
@@ -231,10 +260,9 @@
                     this.description = jsonData.description
                     this.selected_trouser_images_count = this.selected_trouser.trouser_variant_images.length
                     this.currentSize = this.selected_trouser.trouser_variant_meta[0].size
-                    this.mainImage = this.selected_trouser.trouser_variant_images[0].file
-                    this.thumbnails = _.map(this.selected_trouser.trouser_variant_images, 'thumbnail')
                     setTimeout( function(){
-                    this.blur = true;
+                        this.trouserimages.lazy.load();
+                        this.blur = true;
                     }.bind(this), 2000);
                 }
                 else{
@@ -244,6 +272,11 @@
             .catch(function (error){
                 console.log(error);
             })
+        },
+        updated(){
+            console.log("updated")
+            {% comment %} this.trouserimages.lazy.load(); {% endcomment %}
+
         },
         beforeMount(){
             console.log("omo")
@@ -348,7 +381,7 @@
                     console.log(error);
                 })
             },
-            changeMainImage(key){
+            {% comment %} changeMainImage(key){
                 if (this.selected_trouser.trouser_variant_images[key].file !== this.mainImage){
                     this.change = false
                     this.mainImage = this.selected_trouser.trouser_variant_images[key].file
@@ -357,7 +390,7 @@
                         this.change = true
                     }.bind(this), 1000)
                 }
-            },
+            }, {% endcomment %}
             changeSize(index){
                 if (this.selected_trouser.trouser_variant_meta[index].size !== this.currentSize){
                     this.currentSize = this.selected_trouser.trouser_variant_meta[index].size
@@ -381,9 +414,7 @@
                     this.change = false
                     this.changeText = true
                     this.selected_trouser = this.trousers[index]
-                    this.mainImage = this.selected_trouser.trouser_variant_images[0].file
                     this.currentSize = this.selected_trouser.trouser_variant_meta[0].size
-                    this.thumbnails = _.map(this.selected_trouser.trouser_variant_images, 'thumbnail')
                     this.selected_trouser_images_count = this.selected_trouser.trouser_variant_images.length
                     this.selectedVariant = index
                     setTimeout( function(){
