--- a/templates/shop/item_by_category.html
+++ b/templates/shop/item_by_category.html
@@ -8,6 +8,65 @@
             outline: none !important;
             box-shadow: none !important;
         }
+        .lds-ellipsis {
+            display: inline-block;
+            position: relative;
+            width: 80px;
+            height: 80px;
+        }
+        .lds-ellipsis div {
+            position: absolute;
+            top: 36px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: #b91515;
+            animation-timing-function: cubic-bezier(0,1,1,0);
+
+        }
+        .lds-ellipsis div:nth-child(1) {
+            left: 8px;
+            animation: lds-ellipsis1 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(2) {
+            left: 8px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(3) {
+            left: 32px;
+            animation: lds-ellipsis2 0.6s infinite;
+        }
+        .lds-ellipsis div:nth-child(1) {
+            left: 56px;
+            animation: lds-ellipsis3 0.6s infinite;
+        }
+        @keyframes lds-ellipsis1 {
+            0% {
+                transform: scale(0);
+            }
+            100%{
+                transform: scale(1);
+            }
+
+        }
+        @keyframes lds-ellipsis3 {
+            0% {
+                transform: scale(1);
+            }
+            100%{
+                transform: scale(0);
+            }
+
+        }
+        @keyframes lds-ellipsis2 {
+            0% {
+                transform: translate(0, 0);
+            }
+            100%{
+                transform: translate(24px, 0);
+            }
+
+        }
 
     </style>
 {% endblock style %}
@@ -251,8 +310,14 @@
                         <a :href=url class=""> 
                             <div class="card border-0 bg-transparent d-flex justify-content-center align-items-center lazy-container" style="min-height:210px;">
                                 <img :data-src="image" class="card-img-top img-fluid lazy-image">
-                                <div class="spinner-grow text-dark spinner" role="status">
+                                {% comment %} <div class="spinner-grow text-dark spinner spinner-grow-sm" role="status">
                                     <span class="sr-only">Loading...</span>
+                                </div> {% endcomment %}
+                                <div class="lds-ellipsis text-dark spinner">
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
+                                    <div></div>
                                 </div>
                             </div>
                             <div class="card-body p-0">
@@ -554,7 +619,6 @@
                                         lazyImageTemp.getElementsByClassName("spinner")[0].remove();
                                     }
                                     catch(err) {
-                                        console.log("omo")
                                     }
                                     lazyImage.src = lazyImage.dataset.src;
                                     lazyImageTemp.classList.remove("lazy-container");
