--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
             </div>
             {% endfor %}
             {% endif %}
-            <div class="mb-3" style="min-height: 80vh;"> 
+            <div class="mb-3 d-flex flex-column" style="min-height: 80vh;"> 
             {% block content %}
             {% endblock content %}
             </div>
